# raytracing-from-the-ground-up

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  consoleApp.cpp  cppcheck_report.txt  differences.md  valgrind_report.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: GoogleTest.yml  cppcheck.yml  valgrind.yaml
src/: consoleApp.cpp  main.cpp
src/BRDFs/: BRDF.cpp  BRDF.h  FresnelReflector.cpp  FresnelReflector.h  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h  PerfectSpecular.cpp  PerfectSpecular.h  SV_Lambertian.cpp  SV_Lambertian.h
src/BTDFs/: BTDF.cpp  BTDF.h  FresnelTransmitter.cpp  FresnelTransmitter.h  PerfectTransmitter.cpp  PerfectTransmitter.h
src/Cameras/: Camera.cpp  Camera.h  FishEye.cpp  FishEye.h  Orthographic.cpp  Orthographic.h  Pinhole.cpp  Pinhole.h  Spherical.cpp  Spherical.h  StereoCamera.cpp  StereoCamera.h  ThinLens.cpp  ThinLens.h
src/GeometricObjects/: BeveledBox.cpp  BeveledBox.h  BeveledWedge.cpp  BeveledWedge.h  Box.cpp  Box.h  Compound.cpp  Compound.h  CompoundSolidCylinder.cpp  CompoundSolidCylinder.h  ConvexPartCylinder.cpp  ConvexPartCylinder.h  ConvexPartSphere.cpp  ConvexPartSphere.h  ConvexPartTorus.cpp  ConvexPartTorus.h  Disk.cpp  Disk.h  GeometricObject.cpp  GeometricObject.h  Grid.cpp  Instance.cpp  Instance.h  Mesh.cpp  Mesh.h  OpenCylinder.cpp  OpenCylinder.h  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  Triangle.cpp  Triangle.h
src/GeometricObjects/Beveled/: BeveledBox.cpp  BeveledBox.h  BeveledWedge.cpp  BeveledWedge.h
src/GeometricObjects/Compound/: Compound.cpp  Compound.h  CompoundSolidCylinder.cpp  CompoundSolidCylinder.h  Grid.cpp  Grid.h
src/GeometricObjects/PartObjects/: ConvexPartCylinder.cpp  ConvexPartCylinder.h  ConvexPartSphere.cpp  ConvexPartSphere.h  ConvexPartTorus.cpp  ConvexPartTorus.h
src/GeometricObjects/Primitives/: Box.cpp  Box.h  Disk.cpp  Disk.h  OpenCylinder.cpp  OpenCylinder.h  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h
src/GeometricObjects/Triangles/: FlatMeshTriangle.cpp  FlatMeshTriangle.h  FlatUVMeshTriangle.cpp  FlatUVMeshTriangle.h  MeshTriangle.cpp  MeshTriangle.h  SmoothMeshTriangle.cpp  SmoothMeshTriangle.h  SmoothTriangle.cpp  SmoothTriangle.h  SmoothUVMeshTriangle.cpp  SmoothUVMeshTriangle.h  Triangle.cpp  Triangle.h
src/Lights/: Ambient.cpp  Ambient.h  AmbientOccluder.cpp  AmbientOccluder.h  AreaLight.cpp  AreaLight.h  Directional.cpp  Directional.h  EnvironmentLight.cpp  EnvironmentLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/Mappings/: CylindricalMap.cpp  CylindricalMap.h  LightProbe.cpp  LightProbe.h  Mapping.h  RectangularMap.cpp  RectangularMap.h  SphericalMap.cpp  SphericalMap.h
src/Materials/: Dielectric.cpp  Dielectric.h  Emissive.cpp  Emissive.h  GlossyReflector.cpp  GlossyReflector.h  Material.cpp  Material.h  Matte.cpp  Matte.h  Phong.cpp  Phong.h  Reflective.cpp  Reflective.h  SV_Emissive.h  SV_Matte.cpp  SV_Matte.h  Transparent.cpp  Transparent.h
src/Noises/: CubicNoise.cpp  CubicNoise.h  LatticeNoise.cpp  LatticeNoise.h  LinearNoise.cpp  LinearNoise.h
src/Samplers/: Hammersley.cpp  Hammersley.h  Jittered.cpp  Jittered.h  MultiJittered.cpp  MultiJittered.h  NRooks.cpp  NRooks.h  PureRandom.cpp  PureRandom.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h
src/SceneBuilders/: BuildCh03PageOneImage.cpp  BuildFigure03.18.cpp  BuildFigure03.20.cpp  BuildFigure04.04.cpp  WorldBuildChapter03PageOne.cpp
src/Textures/: Checker3D.cpp  Checker3D.h  ConeChecker.cpp  ConeChecker.h  ConstantColor.cpp  ConstantColor.h  CylinderChecker.cpp  CylinderChecker.h  DiskChecker.cpp  DiskChecker.h  FBmTexture.cpp  FBmTexture.h  ImageTexture.cpp  ImageTexture.h  PlaneChecker.cpp  PlaneChecker.h  RampFBmTexture.cpp  RampFBmTexture.h  SphereChecker.cpp  SphereChecker.h  TInstance.cpp  TInstance.h  Texture.cpp  Texture.h  WrappedFBmTexture.cpp  WrappedFBmTexture.h  WrappedTwoColors.cpp  WrappedTwoColors.h
src/Tracers/: GlobalTrace.cpp  GlobalTrace.h  MultipleObjects.cpp  MultipleObjects.h  PathTrace.cpp  PathTrace.h  RayCast.cpp  RayCast.h  SingleSphere.cpp  SingleSphere.h  Tracer.cpp  Tracer.h  Whitted.cpp  Whitted.h
src/UserInterface/: wxraytracer.cpp
src/Utilities/: BBox.cpp  BBox.h  Constants.h  Image.cpp  Image.h  Maths.cpp  Maths.h  Matrix.cpp  Matrix.h  Normal.cpp  Normal.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  RGBColor.cpp  RGBColor.h  Random.h  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h  Vector3D.cpp  Vector3D.h  ply.c  ply.h
src/World/: BuildMultipleObjects3_9.cpp  BuildShadedObjects.cpp  BuildSingleSphere3_6_5.cpp  ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
test/: CMakeLists.txt
test/GeometricObjects/: PlaneTest.cpp  SphereTest.cpp
test/Utilities/: MathsTest.cpp  MatrixTest.cpp  NormalTest.cpp  Point2DTest.cpp  Point3DTest.cpp  RGBColorTest.cpp  RayTest.cpp  Vector3DTest.cpp
